# AI-Trading-System

./: .gitignore  CMakeLists.txt
cpp/include/core/: Application.hpp  Tab.hpp  TabManager.hpp
cpp/include/core/Tabs/: IdleTab.hpp
cpp/include/logging/: Logger.hpp
cpp/include/tabs/: IdleTab.hpp  LivePaperTab.hpp  Tab.hpp
cpp/src/: main.cpp
cpp/src/core/: Application.cpp  TabManager.cpp
cpp/src/logging/: Logger.cpp
cpp/src/tabs/: IdleTab.cpp  LivePaperTab.cpp  Tab.cpp
